syntax="proto3";
package dcgameprotobuf;

//start_no = 1010000

/*
登录的部分走http
通过token获取角色信息
*/

//请求角色列表
//1010001
message PRoleReq {
    string userToken = 1;
}

enum PJobType{
    Saber = 0;
    Magic = 1;
    Defender = 2;
}

message PRoleInfo{
    string name = 1;
    PJobType job = 2;
    int32 level = 3;
    int32 roleId = 4;
}

//1010002
message PRoleRes {
    int32 errorNo = 1;
    repeated PRoleInfo infos = 2;
}

//登录游戏服务器发送获得的roleId用来定位当前登录的角色
//1010003
message PLoginSvrReq{
    int32 roleId = 1;
}

//登录成功
//1010004
message PLoginSvrRes{
    bool error = 1;
}

//添加角色
//1010005
message PAddRoleReq{
  PJobType job = 1;
  string name = 2;
}

//添加角色
//1010006
message PAddRoleRes{
    bool error = 1;
    PRoleInfo info = 2;
}